--- a/chamber/styles/reset.css
+++ b/chamber/styles/reset.css
@@ -14,7 +14,7 @@ html, body {
 /* Header */
 header {
     width: 100%;
-    background-color: #283593; 
+    background-color: #76622b; 
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -112,7 +112,7 @@ nav ul li a:hover {
 
 /* Footer */
 footer {
-    background-color: #1a237e; 
+    background-color: #76622b; 
     color: #e8f5e9; 
     padding: 10px;
     font-size: 14px;
