--- a/chamber/styles/reset.css
+++ b/chamber/styles/reset.css
@@ -15,15 +15,33 @@ html, body {
     color: #3e2723; 
 }
 
+
 /* Header */
 header {
     width: 100%;
-    background-color: #283593; 
+    background-color: #283593;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 30px;
     flex-wrap: wrap;
+    box-sizing: border-box;
+}
+
+h1 {
+    flex: 1;
+    color: #e8f5e9;
+    text-align: center;
+    margin: 0 20%;
+    margin-left: 30%;
+    margin-right: 10%;
+}
+
+.logo img, h1 img {
+    width: 50px;
+    height: auto;
+    vertical-align: middle;
+    margin-right: 0px;
 }
 
 /* Navigation */
