--- a/chamber/styles/reset.css
+++ b/chamber/styles/reset.css
@@ -2,19 +2,21 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css');
 
 /* General Styles */
+/* General Styles */
 html, body {
     overflow-x: hidden; /* Prevent horizontal scrolling */
     font-family: 'Open Sans', Arial, sans-serif;
-    background-color: #fcf8e3; 
-    color: #3e2723; 
+    background-color: #fcf8e3;
+    color: #3e2723;
     margin: 0;
     padding: 0;
+    height: 100%; /* Ensure full height for flexbox alignment */
 }
 
 /* Header */
 header {
     width: 100%;
-    background-color: #283593; 
+    background-color: #283593;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -25,10 +27,10 @@ header {
 
 h1 {
     flex: 1;
-    color: #e8f5e9; 
+    color: #e8f5e9;
     text-align: center;
     margin: 0 20%;
-    margin-left: 30%;
+    margin-left: 13%;
     margin-right: 10%;
 }
 
@@ -39,18 +41,24 @@ h1 {
     margin-right: 0px;
 }
 
-/* Navigation */
+/* Navigation Menu */
 .nav-menu {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    display: none; /* Hide menu by default */
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 80px;
+    left: 0;
+    right: 0;
+    padding: 10px 0;
+    transform: translateY(-100%);
+    transition: transform 0.3s ease-in-out;
 }
 
-.menu-icon {
-    display: none;
-    font-size: 30px;
-    color: #e8f5e9;
-    cursor: pointer;
+.nav-menu.active {
+    display: flex; /* Show menu when active */
+    transform: translateY(0);
 }
 
 nav ul {
@@ -64,14 +72,23 @@ nav ul {
 }
 
 nav ul li a {
-    color: #efeeee; 
+    color: #efeeee;
     text-decoration: none;
     font-weight: bold;
     padding: 10px;
 }
 
 nav ul li a:hover {
-    color: #ffab00; 
+    color: #ffab00;
+}
+
+/* Menu Icon for all screen sizes */
+.menu-icon {
+    display: block; /* Always display the menu icon */
+    font-size: 30px;
+    color: #e8f5e9;
+    cursor: pointer;
+    padding: 10px;
 }
 
 /* Footer */
